# untitled6

./: .gitignore  CMakeLists.txt  abc_class.cpp  except.md  main.cpp
Engine/: main.cpp
Examen/: main.cpp
Processors/: ActiveState.h  Agent.h  AgentDecorator.h  ConcreteAgent.h  ConcreteQueryProcessors.h  Event.h  IdleState.h  Logger.h  QueryProcessorFactory.h  Query_processor.h  Resourse_manager.h  State.h  ThreadPool.h  ThreadPoolT.h  mainT.txt
String/: String.cpp  String.h  main.cpp
abc/: main.cpp
bookorker/: Book.cpp  Book.h  Worker.cpp  Worker.h  main.cpp
nasledovanie/: main.cpp
project/: CMakeLists.txt  Cleaner.cpp  Cleaner.h  Driver.cpp  Driver.h  Employee.cpp  Employee.h  Engineer.cpp  Engineer.h  Factory.cpp  Factory.h  Heading.h  Interfaces.h  Manager.cpp  Manager.h  Personal.cpp  Personal.h  Programmer.cpp  Programmer.h  Project.h  ProjectBudget.h  ProjectManager.cpp  ProjectManager.h  SeniorManager.cpp  SeniorManager.h  TeamLeader.cpp  TeamLeader.h  Tester.cpp  Tester.h  WorkBaseTime.h  main.cpp  Финальный проект РПП.md
project/googletest/googlemock/include/gmock/: gmock-matchers.h
project/googletest/googlemock/src/: gmock-spec-builders.cc
project/googletest/googlemock/test/: gmock-actions_test.cc  gmock-pp_test.cc  gmock-spec-builders_test.cc
project/googletest/googletest/include/gtest/: gtest-printers.h  gtest.h
project/googletest/googletest/include/gtest/internal/: gtest-port.h
project/googletest/googletest/src/: gtest-printers.cc  gtest.cc
project/googletest/googletest/test/: googletest-param-test-test.cc  googletest-printers-test.cc  gtest_unittest.cc
project/src/: Employee.cpp  Factory.cpp  Personal.cpp  Personal.h
project/tests/: CMakeLists.txt  EmployeeTest.cpp
q1/: ElectricBus.cpp  ElectricBus.h  LandTransport.cpp  LandTransport.h  PublicTransport.cpp  PublicTransport.h  Transport.cpp  Transport.h
q2/: Archer.cpp  Archer.h  Character.cpp  Character.h  EliteKnight.cpp  EliteKnight.h  Warrior.cpp  Warrior.h  Weapon.cpp  Weapon.h  testMain.txt
q3/: AutonomousResearchSatellite.cpp  AutonomousResearchSatellite.h  CommunicationSatellite.cpp  CommunicationSatellite.h  Satellite.cpp  Satellite.h  ScientificSatellite.cpp  ScientificSatellite.h
vectors/: main.cpp
